// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Action Button should render correctly with full options 1`] = `
<WithStyles(Button)
  classes={
    Object {
      "label": "BaseButton-label-6 BaseButton-labelAction-7",
      "root": "BaseButton-root-1 BaseButton-rootAction-2 fallback-classes",
    }
  }
  data-test="data-test-string"
  disableFocusRipple={true}
  disableRipple={true}
  fullWidth={true}
  id="test-id"
  onClick={[MockFunction]}
>
  Test Label
</WithStyles(Button)>
`;

exports[`Button Action Button should render correctly with the required options 1`] = `
<WithStyles(Button)
  classes={
    Object {
      "label": "BaseButton-label-6 BaseButton-labelAction-7",
      "root": "BaseButton-root-1 BaseButton-rootAction-2 ",
    }
  }
  disableFocusRipple={true}
  disableRipple={true}
  fullWidth={true}
  id="test-id"
  onClick={[MockFunction]}
>
  Test Label
</WithStyles(Button)>
`;

exports[`Button Add Button should render correctly with the required options 1`] = `
<WithStyles(Button)
  classes={
    Object {
      "label": "BaseButton-label-6 BaseButton-labelAdd-8",
      "root": "BaseButton-root-1 BaseButton-rootAdd-3 ",
    }
  }
  disableFocusRipple={true}
  disableRipple={true}
  fullWidth={true}
  id="test-id"
  onClick={[MockFunction]}
>
  Test Label
</WithStyles(Button)>
`;

exports[`Button Next Button should render correctly with the required options 1`] = `
<WithStyles(Button)
  classes={
    Object {
      "label": "BaseButton-label-6 BaseButton-labelNext-9",
      "root": "BaseButton-root-1 BaseButton-rootNext-4 ",
    }
  }
  disableFocusRipple={true}
  disableRipple={true}
  fullWidth={true}
  id="test-id"
  onClick={[MockFunction]}
>
  Test Label
</WithStyles(Button)>
`;

exports[`Button Remove Button should render correctly with the required options 1`] = `
<WithStyles(Button)
  classes={
    Object {
      "label": "BaseButton-label-6 BaseButton-labelRemove-10",
      "root": "BaseButton-root-1 BaseButton-rootRemove-5 ",
    }
  }
  disableFocusRipple={true}
  disableRipple={true}
  fullWidth={true}
  id="test-id"
  onClick={[MockFunction]}
>
  Test Label
</WithStyles(Button)>
`;
